--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
             associated with the calmness and serenity that we want to convey
             with our design..
           </p>
+          <p>Example</p>
         </div>
       </section>
 
