--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,14 @@
           <li class="cd-box"><div class="cd-color-swatch"></div></li>
 
           <li class="cd-box"><div class="cd-color-swatch"></div></li>
+
+          <li class="cd-box"><div class="cd-color-swatch"></div></li>
+
+          <li class="cd-box"><div class="cd-color-swatch"></div></li>
+
+          <li class="cd-box"><div class="cd-color-swatch"></div></li>
+
+          <li class="cd-box"><div class="cd-color-swatch"></div></li>
         </ul>
       </section>
 
@@ -89,17 +97,6 @@
             distinctio nemo repellat, voluptate fugiat. Quidem neque illum,
             blanditiis!
           </p>
-        </div>
-      </section>
-
-      <section id="buttons" class="cd-buttons">
-        <h2>Buttons</h2>
-
-        <div class="cd-box">
-          <button class="btn">Normal</button>
-          <button class="btn btn-success">Success</button>
-          <button class="btn btn-alert">Alert</button>
-          <button class="btn btn-outline">Outline</button>
         </div>
       </section>
 
@@ -147,11 +144,17 @@
         <h2>Wireframes</h2>
         <div class="cd-box">
           <figure>
-            <img src="assets/wireframe-sm.jpg" alt="Small screen wireframe" />
+            <img
+              src="assets/css-zen-garden-wireframe-sm.png"
+              alt="Small screen wireframe"
+            />
             <figcaption>Small screen</figcaption>
           </figure>
           <figure>
-            <img src="assets/wireframe-lg.jpg" alt="Large screen wireframe" />
+            <img
+              src="assets/css-zen-garden-wireframe-lg.png"
+              alt="Large screen wireframe"
+            />
             <figcaption>Large screen</figcaption>
           </figure>
         </div>
