--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,10 @@
 
       <nav>
         <ul class="cd-main-nav">
-          <li><a href="#branding">Branding</a></li>
           <li><a href="#colors">Colors</a></li>
           <li><a href="#typography">Typography</a></li>
-          <li><a href="#buttons">Buttons</a></li>
-          <li><a href="#icons">icons</a></li>
-          <li><a href="#form">Form</a></li>
           <li><a href="#navigation">Navigation</a></li>
+          <li><a href="#wireframes">Wireframes</a></li>
         </ul>
         <!-- cd-main-nav -->
       </nav>
