--- a/src/index.html
+++ b/src/index.html
@@ -126,13 +126,26 @@
           </div>
           <div>
             <h3>Other Links</h3>
-            <ul>
+            <ul class="cd-other">
               <li><a href="#">One</a></li>
               <li><a href="#">Two</a></li>
               <li><a href="#">Three</a></li>
               <li><a href="#">Four</a></li>
               <li><a href="#">Five</a></li>
             </ul>
+          </div>
+
+          <div>
+            <h3>Button-like links</h3>
+           
+              <ul class="cd-button_link">
+                <li><a href="#">One</a></li>
+                <li><a href="#">Two</a></li>
+                <li><a href="#">Three</a></li>
+                <li><a href="#">Four</a></li>
+                <li><a href="#">Five</a></li>
+              </ul>
+            </nav>
           </div>
         </div>
       </section>
