Added font sizes in Typography section

--- a/src/index.html
+++ b/src/index.html
@@ -86,9 +86,9 @@
         <h2>Typography</h2>
 
         <div class="cd-box">
-          <h1>Heading, <span></span></h1>
+          <h1>Heading, 100px - Heading 1, 24px - Heading 2, 45px - Heading 3</h1>
           <p>
-            Aa - <span></span>. Lorem ipsum dolor sit amet, consectetur
+            Aa - 16px. Lorem ipsum dolor sit amet, consectetur
             adipisicing elit. Omnis voluptate distinctio reprehenderit, autem
             deleniti ad <a href="#0">voluptatum eaque</a>. Optio ea aperiam nisi
             distinctio nemo repellat, voluptate fugiat. Quidem neque illum,
